--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ applications of OT for machine learning</strong> and related fields.</p>
                         <div class="section-content">
                             <ul><br />
 <li><a
-href="https://scholar.google.de/citations?user=FTLXftQAAAAJ&hl=de"><strong>Alexandra Suvorikova</strong>, <em>Google</em></a></li><br />
+href="https://scholar.google.de/citations?user=FTLXftQAAAAJ&hl=de"><strong>Alexandra Suvorikova</strong>, <em>Potsdam University</em></a></li><br />
 <li><a href="http://marcocuturi.net/"><strong>Marco
 Cuturi</strong>, <em>Université Paris-Saclay/ Google Brain</em></a></li><br />
 <li><a href="http://www.gpeyre.com/"><strong>Gabriel Peyré</strong>, <em>Ecole Normale Supérieure / CNRS</em></a></li><br />
